# kit-opengl

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
libs/: README.md
src/: main.cpp
